tests/fixtures/invalid/wrong-payload-version.mobileconfig
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>PayloadContent</key>
	<array>
		<dict>
			<key>PayloadDisplayName</key>
			<string>Dock Settings</string>
			<key>PayloadIdentifier</key>
			<string>com.example.dock</string>
			<key>PayloadType</key>
			<string>com.apple.dock</string>
			<key>PayloadUUID</key>
			<string>55555555-5555-5555-5555-555555555555</string>
			<key>PayloadVersion</key>
			<integer>2</integer>
		</dict>
	</array>
	<key>PayloadDisplayName</key>
	<string>Wrong Version Profile</string>
	<key>PayloadIdentifier</key>
	<string>com.example.profile.wrongversion</string>
	<key>PayloadType</key>
	<string>Configuration</string>
	<key>PayloadUUID</key>
	<string>66666666-6666-6666-6666-666666666666</string>
	<key>PayloadVersion</key>
	<integer>1</integer>
</dict>
</plist>
